--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -5,7 +5,7 @@
     font-family: 'Roboto', sans-serif;
 }
 .form-wrapper{
-    position: absolute;
+    position: fixed;
     left: 50%;
     top: 50%;
     width: 300px;
